JumpScript/tests/baselines/reference/jmpxEmit3.errors.txt
tests/cases/conformance/jsx/file.jmpx(18,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/jsx/file.jmpx(22,3): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/jsx/file.jmpx(25,3): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/jsx/file.jmpx(38,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/conformance/jsx/file.jmpx (4 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    module M {
    	export class Foo { constructor() { } }
    	export module S {
    		export class Bar { }
    
    		// Emit Foo
    		// Foo, <Foo />;
    	}
    }
    
    module M {
    	// Emit M.Foo
    	Foo, <Foo />;
    	~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    
    	export module S {
    		// Emit M.Foo
    		Foo, <Foo />;
    		~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    
    		// Emit S.Bar
    		Bar, <Bar />;
    		~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    	}
    
    }
    
    module M {
    	// Emit M.S.Bar
    	S.Bar, <S.Bar />;
    }
    
    module M {
    	var M = 100;
    	// Emit M_1.Foo
    	Foo, <Foo />;
    	~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    }
    